fix * animation mobile menu

--- a/style.css
+++ b/style.css
@@ -40,11 +40,13 @@ main {
 
 @keyframes height {
     from {
-        transform: translateY(-100%);
+        transform: translateY(-100%) scale(0);
+        /* transform: scale(0); */
         opacity: 0;
     }
     to {
-        transform: translateY(0);
+        transform: translateY(0) scale(1);
+        /* transform: scale(1); */
         opacity: 1;
     }
 }
